fixed spacing of Magazine Grid block

--- a/src/blocks/magazine-grid/style.scss
+++ b/src/blocks/magazine-grid/style.scss
@@ -1,3 +1,7 @@
+.wp-block-themezee-blocks-magazine-grid {
+	margin-bottom: 1.5em;
+}
+
 /* Magazine Columns */
 @media only screen and (min-width: 480px) {
 	.tz-magazine-columns-2,
